dev/k8s/rem.namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: rem
  selfLink: /api/v1/namespaces/rem
spec:
  finalizers:
  - kubernetes
status:
  phase: Active
