dev/k8s/restheart.deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: restheart
  namespace: rem
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restheart
  template:
    metadata:
      labels:
        app: restheart
    spec:
      containers:
      - name: restheart
        image: quay.io/rem/restheart:dev
        ports:
        - containerPort: 8080
