dev/k8s/tika.deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: tika
  namespace: rem
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tika
  template:
    metadata:
      labels:
        app: tika
    spec:
      containers:
      - name: tika
        image: logicalspark/docker-tikaserver:1.17
        ports:
        - containerPort: 9998
