dev/k8s/webapp.deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: webapp
  namespace: rem
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: static
        image: quay.io/rem/webapp:dev
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /build/dist
          name: dev
      volumes:
      - name: dev
        hostPath:
          path: /code/webapp/dist
          type: Directory
