dev/k8s/mongodb.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: rem
spec:
  selector:
    app: mongo
  clusterIP: None
  ports:
  - name: http
    port: 27017
    targetPort: 27017
