dev/k8s/restheart.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: restheart
  namespace: rem
spec:
  selector:
    app: restheart
  clusterIP: None
  ports:
  - name: http
    port: 8080
    targetPort: 8080
