dev/k8s/webapp.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: webapp
  namespace: rem
spec:
  selector:
    app: webapp
  clusterIP: None
  ports:
  - name: http
    port: 80
    targetPort: 80
